--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,15 +8,32 @@
 
 	<title><%=((typeof titulo === "undefined" || !titulo) ? "Projeto" : (titulo + " - Projeto")) %></title>
 
+	<link rel="stylesheet" href="/public/style.css">
 	<%- defineContent("styles") %>
+
 </head>
 <body>
 
 	<nav>
-		Home
-		|
-		Extra
-	</nav>
+		<ul>
+		  <li> 
+			<!-- link one -->
+			<a href="#aboutMe"> About Me </a>
+		  </li>
+		  <li>
+			<!-- link two -->
+			 <a href="#projects"> Projects </a>
+		  </li>
+		  <li>
+			<!-- link three -->
+			<a href="#cv"> CV </a>
+		  </li>
+		  <li>
+			<!-- link four -->
+			<a href="#contacts"> Contacts </a>
+		  </li>
+		</ul>
+	  </nav>
 
 	<%- body %>
 
