--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,27 +20,30 @@
 </head>
 <body>
 
-	<nav>
-		<ul>
-		  <li> 
-			<!-- link one -->
-			<a href="#aboutMe"> About Me </a>
-		  </li>
-		  <li>
-			<!-- link two -->
-			 <a href="#projects"> Projects </a>
-		  </li>
-		  <li>
-			<!-- link three -->
-			<a href="#cv"> CV </a>
-		  </li>
-		  <li>
-			<!-- link four -->
-			<a href="#contacts"> Contacts </a>
-		  </li>
-		</ul>
-	  </nav>
-	  <p>me mama</p>
+	<header class="header">
+        <nav class="navbar">
+            <a href="#" class="nav-logo">THE GALLERY</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Contact</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+	</header>
 	  
 
 	<%- body %>
