--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="pt-br">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,35 +19,24 @@
 	<%- defineContent("styles") %>
 </head>
 <body>
-
-	<header class="header">
-        <nav class="navbar">
-            <a href="#" class="nav-logo">THE GALLERY</a>
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>
+	<header>
+        <a href="#" class="logo">THE GALLERY</a>
+        <nav> 
+            <ul class="menu">
+			<div class="close-btn"></div>
+            <li class="menu-item"><a href="#">Services</a></li>
+            <li class="menu-item"><a href="#">Blog</a></li>
+            <li class="menu-item"><a href="#">About</a></li>
+            <li class="menu-item"><a href="#">Contact</a></li>
             </ul>
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
         </nav>
-	</header>
-	  
+		<div class="menu-btn"></div>
+    </header>
 
 	<%- body %>
 
 	<%- defineContent("scripts") %>
+    <script src="/public/js/menu.js"></script>
+
 </body>
 </html>
