Página-Sobre nós

--- a/views/index/sobre.ejs
+++ b/views/index/sobre.ejs
@@ -1,1 +1,14 @@
-﻿<p>Oi, sire! 😅</p>
+﻿<h1>Sobre nós</h1>
+
+<h2>Integrantes do grupo:</h2>
+
+<ul>
+    <li>Bernardo César de Figueiredo</li>
+
+    <li>Fernando Zafani Gomes Filho</li>
+
+    <li>Igor Carolino Ruiz</li>
+
+    <li>João Lucas Abreu Nogueira</li>
+
+</ul>
