NAVBAR COMPLETA E INICIO DA HOME

--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -1,4 +1,50 @@
-﻿<p>Oi, mundo! 😅</p>
+﻿<section class="home">
+  <video class="video-slide active" src="/public/VIDEOS/mixkit-mix-of-blue-green-and-pink-colored-paints-3842.mp4" autoplay muted loop></video>
+  <video class="video-slide" src="/public/VIDEOS/mixkit-abstract-psychedelic-texture-in-motion-red-and-white-tones-12309-medium.mp4" autoplay muted loop></video>
+  <video class="video-slide" src="/public/VIDEOS/mixkit-hand-of-an-artist-with-a-brush-when-painting-5197.mp4" autoplay muted loop></video>
+  <video class="video-slide" src="/public/VIDEOS/mixkit-tour-high-above-a-city-at-dusk-41375.mp4" autoplay muted loop></video>
+  <video class="video-slide" src="/public/VIDEOS/mixkit-stars-in-space-1610.mp4" autoplay muted loop></video>
+  <div class="content active">
+    <h1>O que é?<br><span>Arte.</span></h1>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <a href="#">Leia Mais</a>
+  </div>
+  <div class="content">
+    <h1>Expressão<br><span>Audiovisual</span></h1>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <a href="#">Leia Mais</a>
+  </div>
+  <div class="content">
+    <h1>Cores e <br><span>Imagens</span></h1>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <a href="#">Leia Mais</a>
+  </div>
+  <div class="content">
+    <h1>luz e <br><span>Fotografia</span></h1>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <a href="#">Leia Mais</a>
+  </div>
+  <div class="content">
+    <h1>um jeito diferente de <br><span>viver</span></h1>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <a href="#">Leia Mais</a>
+  </div>
+  <div class="media-icons">
+    <a href="#"><i class="fa fa-facebook"></i></a>
+    <a href="#"><i class="fa fa-instagram"></i></a> 
+    <a href="#"><i class="fa fa-twitter"></i></a> 
+  </div>
+  <div class="slider-nav">
+    <div class="slider-nav-btn active"></div>
+    <div class="slider-nav-btn"></div>
+    <div class="slider-nav-btn"></div>
+    <div class="slider-nav-btn"></div>
+    <div class="slider-nav-btn"></div>
+  </div>
+</section>
+
+<!--
+<p>Oi, mundo! 😅</p>
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -25,3 +71,4 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+-->
