--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,115 +1,278 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
+/* CSS Layout */
 header {
     z-index: 999;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #000000;
-    box-shadow: 0 5px 25px rgba(0 0 0 / 20%);
-    padding: 0 100px;
-    transition: 0.6s;
+    padding: 15px 200px;
+    transition: 0.5s ease;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.719), rgba(54, 54, 54, 0));
 }
 
 header .logo {
-    color: white;
-    font-size: 1.8em;
+    color: rgb(255, 255, 255);
+    font-size: 1.5em;
     font-weight: 700;
     text-transform: uppercase;
     text-decoration: none;
-    letter-spacing: 2px;
 }
 
 header nav {
     position: relative;
-    line-height: 75px;
 }
 
-header nav .menu {
+header nav .menu a{
     position: relative;
+    color: #ffffff;
+    font-size: 1em;
+    font-weight: 500;
+    text-decoration: none;
+    margin-left: 30px;
+    transition: 0.3s ease;
+}
+
+header nav .menu a:before {
+    content: '';
+    position: absolute;
+    background: #ffffff;
+    width: 0;
+    height: 3px;
+    bottom: 0;
+    left: 0;
+    transition: 0.3s ease;
+}
+
+header nav .menu a:hover:before {
+    width: 100%;
+}
+
+/*CSS Home*/
+section {
+    padding: 100px 200px;
+}
+
+.home {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
-    list-style: none;
-    user-select: none;
+    flex-direction: column;
+    background: #771EF5;
+
 }
 
-.menu-item > a {
-    color: white;
-    font-size: 1em;
-    text-decoration: none;
-    margin: 20px;
-    padding: 25px 0;
+.home:before {
+    z-index: 777;
+    content: '';
+    position: absolute;
+    background: rgba(131, 3, 251, 0.3);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
-.menu-item > a:hover {
-    color: #469DFF;
-    transition: 0.3s;
-}
-
-.menu-btn {
+.home .content {
+    z-index: 888;
+    color:#ffffff;
+    width: 70%;
+    margin-top: 50px;
     display: none;
 }
 
-@media (max-width: 1060px) {
-    header nav .menu {
+.home .content.active {
+    display: block;
+}
+
+.home .content h1 {
+    font-size: 4em;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    line-height: 75px;
+    margin-bottom: 40px;
+}
+
+.home .content h1 span {
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.home .content p {
+    margin-bottom: 65px;
+}
+
+.home .content a {
+    background: #ffffff;
+    padding: 15px 35px;
+    color: #771EF5;
+    font-size: 1.1em;
+    font-weight: 500;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.home .media-icons {
+    z-index: 888;
+    position: absolute;
+    right: 30px;
+    display: flex;
+    flex-direction:column;
+    transition: 0.5s ease;
+}
+
+.home .media-icons a{
+    color: white;
+    font-size: 1.6em;
+    transition: 0.3s ease;
+}
+
+.home .media-icons a:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.home .media-icons a:hover{
+    transform: scale(1.3);
+}
+
+.home video {
+    z-index: 000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slider-nav {
+    z-index: 888;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(80px);
+    margin-bottom: 12px;
+}
+
+.slider-nav .slider-nav-btn {
+    width: 12px;
+    height: 12px;
+    background: #fff;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+    transition: 0.3s ease;
+}
+
+.slider-nav .slider-nav-btn.active{
+    background:#771EF5;
+}
+
+.slider-nav .slider-nav-btn:not(:last-child){
+    margin-right: 20px;
+}
+
+.slider-nav .slider-nav-btn:hover {
+    transform: scale(1.2);
+}
+
+.video-slide {
+    position: absolute;
+    width: 100%;
+    clip-path: circle(0% at 0 50%);
+}
+
+.video-slide.active {
+    clip-path: circle(150% at 0 50%);
+    transition: 2s ease;
+    transition-property: clip-path;
+}
+
+/*Media Query*/
+@media (max-width: 1040px) {
+    header {
+        padding: 12px 20px;
+    }
+
+    section {
+        padding: 100px 20px;
+    }
+    
+    .home .media-icons {
+        right: 15px;
+    }
+    
+    header nav {
+        display: none;
+    }
+
+    header nav.active{
         position: fixed;
-        display: block;
-        background: #000000;
-        min-width: 350px;
+        width: 100%;
         height: 100vh;
         top: 0;
-        right: -100%;
-        padding: 90px 50px;
-        visibility: hidden;
-        overflow-y: auto;
-        transition: 0.5s;
-        transition-property: right, visibility;
-    }
-
-    header nav .menu.active{
-        right: 0;
-        visibility: visible;
-    }
-
-    .menu-item {
-        position: relative;
-    }
-
-    .close-btn {
-        position: absolute;
-        background: url(/public/IMGS/close.png)no-repeat;
-        width: 40px;
-        height: 40px;
-        background-size: 25px;
-        background-position: center;
-        top: 0;
         left: 0;
-        margin: 25px;
-        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgba(1, 1, 1, 0.5);
+    }
+
+    header nav .menu a{
+        color: #222;
+        font-size: 1.2em;
+        margin: 20px;
+    }
+
+    header nav .menu a:before {
+        background: #222;
+        height: 5px;
+    }
+
+    header nav.active .menu {
+        background: #fff;
+        width: 600px;
+        max-width: 600px;
+        margin: 20px;
+        padding: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 5px;
+        box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
     }
 
     .menu-btn {
-        background: url(/public/IMGS/menu\ \(1\).png)no-repeat;
-        width: 40px;
-        height: 40px;
+        background: url(/public/IMGS/menu.png)no-repeat;
         background-size: 30px;
         background-position: center;
+        width: 40px;
+        height: 40px;
+        filter: invert();
         cursor: pointer;
-        display: block;
+        transition: 0.3s ease;
     }
 
-    header {
-        padding: 20px 15px;;
+    .menu-btn.active {
+        z-index: 999;
+        background: url(/public/IMGS/x.png)no-repeat;
+        background-size: 25px;
+        background-position: center;
+        transition: 0.3s ease;
     }
 }
