--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,24 +13,26 @@
 
 	<!-- Bootstrap 4 -->
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
-	<link rel="stylesheet" href="/public/CSS/style.css">
 	<%- defineContent("styles") %>
+	<link rel="stylesheet" href="/public/CSS/style.css">
+
 </head>
 <body>
 	<header>
-        <a href="#" class="logo">THE GALLERY</a>
-        <nav> 
-            <ul class="menu">
-			<div class="close-btn"></div>
-            <li class="menu-item"><a href="#">Services</a></li>
-            <li class="menu-item"><a href="#">Blog</a></li>
-            <li class="menu-item"><a href="#">About</a></li>
-            <li class="menu-item"><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-		<div class="menu-btn"></div>
+        <a href="#" class="logo">GALLERY</a>
+      <div class="menu-btn"></div>
+      <nav> 
+          <div class="menu">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Explore</a>
+            <a href="#">Gallery</a>
+            <a href="#">Contact</a>
+          </div>
+      </nav>
     </header>
 
 	<%- body %>
