--- a/views/index/sobre.ejs
+++ b/views/index/sobre.ejs
@@ -1,5 +1,9 @@
 ﻿<h1>Sobre nós</h1>
 
+<h3>O projeto desse site foi criado para se ter um lugar para postarem artes de forma geral, seja uma arte famosa que a pessoa gosta, ou uma arte autoral que ele gostaria que outras pessoas vissem</h3>
+
+<p>Projeto Interdisciplinar II - ESPM TECH / 2º semestre</p>
+
 <h2>Integrantes do grupo:</h2>
 
 <ul>
