--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,7 +18,7 @@
 
 	<%- defineContent("styles") %>
 	<link rel="stylesheet" href="/public/CSS/style.css">
-
+	<%- defineContent("pos-styles") %>
 </head>
 <body>
 	<header>
