--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,11 +26,10 @@
       <div class="menu-btn"></div>
       <nav> 
           <div class="menu">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Explore</a>
-            <a href="#">Gallery</a>
-            <a href="#">Contact</a>
+            <a href="/">Home</a>
+            <a href="/explore">Explore</a>
+            <a href="/upload">Upload</a>
+            <a href="/about">About us</a>
           </div>
       </nav>
     </header>
@@ -38,7 +37,7 @@
 	<%- body %>
 
 	<%- defineContent("scripts") %>
-    <script src="/public/js/menu.js"></script>
+    <script src="/public/JS/menu.js"></script>
 
 </body>
 </html>
