--- a/views/index/explore.ejs
+++ b/views/index/explore.ejs
@@ -2,7 +2,7 @@
 <div class="glide">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
-        <li class="glide__slide">0</li>
+        <li class="glide__slide"> <img src="/public/IMGS/teste.jpg"/> </li>
         <li class="glide__slide">1</li>
         <li class="glide__slide">2</li>
       </ul>
