--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -1,4 +1,5 @@
-﻿<section class="home">
+﻿<!-- Slider Passer -->
+<section class="home">
   <video class="video-slide active" src="/public/VIDEOS/mixkit-mix-of-blue-green-and-pink-colored-paints-3842.mp4" autoplay muted loop></video>
   <video class="video-slide" src="/public/VIDEOS/mixkit-abstract-psychedelic-texture-in-motion-red-and-white-tones-12309-medium.mp4" autoplay muted loop></video>
   <video class="video-slide" src="/public/VIDEOS/mixkit-hand-of-an-artist-with-a-brush-when-painting-5197.mp4" autoplay muted loop></video>
@@ -42,6 +43,19 @@
     <div class="slider-nav-btn"></div>
   </div>
 </section>
+
+<!-- Container -->
+<div class="container-fluid container">
+  <div class="row">
+    <div class="col-sm-6 coluna">
+
+    </div>
+    <div class="col-sm-6 coluna">
+      
+    </div>
+  </div>
+</div>
+
 
 <!--
 <p>Oi, mundo! 😅</p>
