--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -7,6 +7,11 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    
+    background-color: rgb(27, 27, 27);
+}
+
 /*CSS Layout - NavBar*/
 header {
     z-index: 999;
@@ -285,4 +290,40 @@ section {
 
 .coluna {
     padding: 15px;
+}
+
+.container .coluna .box {
+    color: rgb(255, 255, 255);
+}
+
+.container .coluna .box h1 {
+    opacity: 1;
+    font-size: 3.7em;
+    background: linear-gradient(to right, hotpink, rgb(255, 255, 255));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 900;
+}
+
+.container .coluna .box h2 {
+    opacity: 0.7;
+    font-size: 2.7em;
+    background: linear-gradient(to right, rgb(112, 215, 255), rgb(255, 255, 255));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 700;
+}
+
+.container .coluna .box h3 {
+    opacity: 0.5;
+    margin-bottom: 3px;
+    font-size: 1.7em;
+    background: linear-gradient(to right, rgb(159, 61, 252), rgb(255, 255, 255));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 600;
+}
+
+.container .coluna .box p {
+    margin-top: 10px;
 }
