--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -60,6 +60,64 @@
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-sm-4 coluna">
+      <div class="cube">
+        <div class="cube1">
+          <i class="material-icons icons">paid</i>
+          <h4>Remuneração</h4>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+      </div>
+    </div>
+    <div class="col-sm-4 coluna">
+      <div class="cube">
+        <div class="cube2">
+          <i class="material-icons icons">paid</i>
+          <h4>Remuneração</h4>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+      </div>
+    </div>
+    <div class="col-sm-4 coluna">
+      <div class="cube">
+        <div class="cube3">
+          <i class="material-icons icons">paid</i>
+          <h4>Remuneração</h4>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4 coluna">
+      <div class="cube">
+        <div class="cube1">
+          <i class="material-icons icons">paid</i>
+          <h4>Remuneração</h4>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+      </div>
+    </div>
+    <div class="col-sm-4 coluna">
+      <div class="cube">
+        <div class="cube2">
+          <i class="material-icons icons">paid</i>
+          <h4>Remuneração</h4>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+      </div>
+    </div>
+    <div class="col-sm-4 coluna">
+      <div class="cube">
+        <div class="cube3">
+          <i class="material-icons icons">paid</i>
+          <h4>Remuneração</h4>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+      </div>
+    </div>
+  </div>
 </div>
 
 
