--- a/views/index/explore.ejs
+++ b/views/index/explore.ejs
@@ -1,18 +1,76 @@
+<h1>Explore</h1>
+
+<h2>Conheça nossos diferentes artistas</h2>
+
+<h3>Artista 1</h3>
 
 <div class="glide">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
-        <li class="glide__slide"> <img src="/public/IMGS/teste.jpg"/> </li>
-        <li class="glide__slide">1</li>
-        <li class="glide__slide">2</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>1 </li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>2</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>3</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>4</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>5</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>6</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>7</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>8</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>9</li>
       </ul>
+    </div>
+    <div class="glide__arrows" data-glide-el="controls">
+      <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
+      <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+    </div>
+  </div>
+
+  <h3>Artista 2</h3>
+
+  <div class="glide2">
+    <div class="glide__track" data-glide-el="track">
+      <ul class="glide__slides">
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>1 </li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>2</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>3</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>4</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>5</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>6</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>7</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>8</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>9</li>
+      </ul>
+    </div>
+    <div class="glide__arrows" data-glide-el="controls">
+      <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
+      <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+    </div>
+  </div>
+
+  <h3>Artista 3</h3>
+  <div class="glide3">
+    <div class="glide__track" data-glide-el="track">
+      <ul class="glide__slides">
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>1 </li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>2</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>3</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>4</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>5</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>6</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>7</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>8</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>9</li>
+      </ul>
+    </div>
+    <div class="glide__arrows" data-glide-el="controls">
+      <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
+      <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
     </div>
   </div>
 
 
 
 <%- contentFor("styles") %>
-<link rel="stylesheet" href="/public/glide-3.4.1/css/glide.core.min.css" />
+<link rel="stylesheet" href="/public/glide-3.4.1/dist/css/glide.core.min.css" />
 
 <%- contentFor("pos-styles") %>
 <style type="text/css">
@@ -22,8 +80,17 @@
 </style>
 
 <%- contentFor("scripts") %>
-<script src="/public/glide-3.4.1/glide.min.js"></script>
+<script src="/public/glide-3.4.1/dist/glide.min.js"></script>
 
 <script>
-  new Glide('.glide').mount()
+const config={
+  type: "carousel",
+  focusAt: "center",
+  perView:3,
+  startAt:1,
+  gap: 500
+}
+new Glide(".glide", config).mount();
+new Glide(".glide2", config).mount();
+new Glide(".glide3", config).mount();
 </script>
