--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -286,6 +286,7 @@ section {
 .container {
     padding: 50px;
     max-width: 1200px;
+    color: #636363;
 }
 
 .coluna {
@@ -331,6 +332,7 @@ section {
 
 .cube {
     text-align: center;
+    max-width: 300px;
 }
 
 .icons {
@@ -355,4 +357,8 @@ section {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+
+
+
 
