--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -65,7 +65,7 @@
       <div class="cube">
         <div class="cube1">
           <i class="material-icons icons">paid</i>
-          <h4>Remuneração</h4>
+          <h4>Remuneração Justa</h4>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
       </div>
@@ -73,8 +73,8 @@
     <div class="col-sm-4 coluna">
       <div class="cube">
         <div class="cube2">
-          <i class="material-icons icons">paid</i>
-          <h4>Remuneração</h4>
+          <i class="material-icons icons">lightbulb</i>
+          <h4>Exponha as suas Ideias</h4>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
       </div>
@@ -82,8 +82,8 @@
     <div class="col-sm-4 coluna">
       <div class="cube">
         <div class="cube3">
-          <i class="material-icons icons">paid</i>
-          <h4>Remuneração</h4>
+          <i class="material-icons icons">fingerprint</i>
+          <h4>Deixe a sua Marca</h4>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
       </div>
@@ -93,8 +93,8 @@
     <div class="col-sm-4 coluna">
       <div class="cube">
         <div class="cube1">
-          <i class="material-icons icons">paid</i>
-          <h4>Remuneração</h4>
+          <i class="material-icons icons">add_shopping_cart</i>
+          <h4>Compre Projetos</h4>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
       </div>
@@ -102,8 +102,8 @@
     <div class="col-sm-4 coluna">
       <div class="cube">
         <div class="cube2">
-          <i class="material-icons icons">paid</i>
-          <h4>Remuneração</h4>
+          <i class="material-icons icons">trending_up</i>
+          <h4>Possua Relevância</h4>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
       </div>
@@ -111,8 +111,8 @@
     <div class="col-sm-4 coluna">
       <div class="cube">
         <div class="cube3">
-          <i class="material-icons icons">paid</i>
-          <h4>Remuneração</h4>
+          <i class="material-icons icons">app_shortcut</i>
+          <h4>Explore</h4>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
       </div>
