--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -60,6 +60,35 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+
+    <div class="col-sm-6 coluna">
+      <div class="card">
+        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-6 coluna">
+      <div class="card">
+        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
+
   <div class="row">
     <div class="col-sm-4 coluna">
       <div class="cube">
