--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -46,6 +46,7 @@
 
 <!-- Container -->
 <div class="container-fluid container">
+<!-- Landing -->
   <div class="row">
     <div class="col-sm-6 coluna">
       <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_sk5h1kfn.json"  background="transparent"  speed="1"  style="width: 400px; height: 400px;"  loop  autoplay></lottie-player>
@@ -61,26 +62,58 @@
     </div>
   </div>
 
-  <div class="row">
+<!-- Cards -->
+  <h1 class="titulos">Nossos Artistas</h1>
+  <div class="row c">
 
     <div class="col-sm-6 coluna">
       <div class="card">
-        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+        <img class="card-img-top" src="https://esnoticia.sv/wp-content/uploads/2020/10/21-6.jpg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Nome_da_Obra</h5>
+          <h6 class="card-text">Por Nome_do_Artista</h6>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Veja Mais</a>
         </div>
       </div>
     </div>
 
     <div class="col-sm-6 coluna">
       <div class="card">
-        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+        <img class="card-img-top" src="https://esnoticia.sv/wp-content/uploads/2020/10/21-6.jpg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Nome_da_Obra</h5>
+          <h6 class="card-text">Por Nome_do_Artista</h6>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Veja Mais</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row c" style="margin-bottom: 50px;">
+
+    <div class="col-sm-6 coluna">
+      <div class="card">
+        <img class="card-img-top" src="https://esnoticia.sv/wp-content/uploads/2020/10/21-6.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Nome_da_Obra</h5>
+          <h6 class="card-text">Por Nome_do_Artista</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Veja Mais</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-6 coluna">
+      <div class="card">
+        <img class="card-img-top" src="https://esnoticia.sv/wp-content/uploads/2020/10/21-6.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Nome_da_Obra</h5>
+          <h6 class="card-text">Por Nome_do_Artista</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Veja Mais</a>
         </div>
       </div>
     </div>
@@ -88,7 +121,7 @@
 
   </div>
 
-
+<!-- Icons -->
   <div class="row">
     <div class="col-sm-4 coluna">
       <div class="cube">
