--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -122,6 +122,7 @@
   </div>
 
 <!-- Icons -->
+  <h1 class="titulos">Benefícios</h1>
   <div class="row">
     <div class="col-sm-4 coluna">
       <div class="cube">
@@ -181,6 +182,16 @@
     </div>
   </div>
 </div>
+
+
+
+
+<%- contentFor("pos-styles") %>
+<style type="text/css">
+  header {
+    position: absolute;
+  }
+</style>
 
 
 <!--
