--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,7 +26,7 @@
 </head>
 <body>
 	<header>
-        <a href="#" class="logo">GALLERY</a>
+    	<a href="#" class="logo">GALLERY</a>
       <div class="menu-btn"></div>
       <nav> 
           <div class="menu">
@@ -34,6 +34,7 @@
             <a href="/explore">Explore</a>
             <a href="/upload">Upload</a>
             <a href="/about">About us</a>
+			<a href="#" class="material-icons" style="font-size: 36px;">account_circle</a>
           </div>
       </nav>
     </header>
