--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,13 +28,16 @@
 	<header>
     	<a href="#" class="logo">GALLERY</a>
       <div class="menu-btn"></div>
+	  <div class="login">
+		  <h1>UEPA</h1>
+	  </div>
       <nav> 
           <div class="menu">
             <a href="/">Home</a>
             <a href="/explore">Explore</a>
             <a href="/upload">Upload</a>
             <a href="/about">About us</a>
-			<a href="#" class="material-icons" style="font-size: 36px;">account_circle</a>
+			<a href="#" class="material-icons profile" style="font-size: 36px;">account_circle</a>
           </div>
       </nav>
     </header>
