--- a/views/index/explore.ejs
+++ b/views/index/explore.ejs
@@ -4,18 +4,18 @@
 
 <h3>Artista 1</h3>
 
-<div class="glide">
+<div class="glide espacamento">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>1 </li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>2</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>3</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>4</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>5</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>6</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>7</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>8</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>9</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
       </ul>
     </div>
     <div class="glide__arrows" data-glide-el="controls">
@@ -24,20 +24,21 @@
     </div>
   </div>
 
-  <h3>Artista 2</h3>
+  <h3>Fotografia</h3>
 
-  <div class="glide2">
+  <div class="glide2 espacamento">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>1 </li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>2</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>3</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>4</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>5</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>6</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>7</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>8</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>9</li>
+        <li class="glide__slide"> <img src="/public/IMGS/Luz_Station.jpg"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/Macaco2.jpg"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/Omniskull.jpg"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/orquidea.jpg"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/Passarinhando.jpg"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/PorDoSol.jpg"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/VoltandoProFuturo.jpg"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/BairroLiberdade.jpg"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/Zebra_GuiMoraes.jpg"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/Gato.jpg"/></li>
       </ul>
     </div>
     <div class="glide__arrows" data-glide-el="controls">
@@ -47,18 +48,18 @@
   </div>
 
   <h3>Artista 3</h3>
-  <div class="glide3">
+  <div class="glide3 espacamento">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>1 </li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>2</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>3</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>4</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>5</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>6</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>7</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>8</li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/>9</li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
       </ul>
     </div>
     <div class="glide__arrows" data-glide-el="controls">
@@ -79,11 +80,53 @@
 const config={
   type: "carousel",
   focusAt: "center",
-  perView:3,
+  perView: 3,
   startAt:1,
-  gap: 500
+  
 }
 new Glide(".glide", config).mount();
 new Glide(".glide2", config).mount();
 new Glide(".glide3", config).mount();
 </script>
+
+<%- contentFor("pos-styles") %>
+<style type="text/css">
+h1 {
+    opacity: 1;
+    font-size: 3.7em;
+    background: linear-gradient(to right, hotpink, rgb(255, 255, 255));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 900;
+}
+
+ h2 {
+    opacity: 0.7;
+    font-size: 2.7em;
+    background: linear-gradient(to right, rgb(112, 215, 255), rgb(255, 255, 255));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 700;
+}
+h3 {
+    opacity: 0.5;
+    margin-bottom: 3px;
+    font-size: 1.7em;
+    background: linear-gradient(to right, rgb(159, 61, 252), rgb(255, 255, 255));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 600;
+}
+
+img{
+  max-width: 100%;
+}
+
+.espacamento{
+  padding-bottom: 20px;
+}
+
+</style>
