--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,8 +28,13 @@
 	<header>
     	<a href="#" class="logo">GALLERY</a>
       <div class="menu-btn"></div>
-	  <div class="login">
-		  <h1>UEPA</h1>
+	  <div class="fundo-login">
+		<div class="login">
+			<p class="material-icons" style="font-size: 64px;">account_circle</p>
+			<input type="text" placeholder="E-mail ou Apelido">
+			<input type="password" placeholder="Senha">
+			<button type="button">Login</button>
+		</div>
 	  </div>
       <nav> 
           <div class="menu">
