--- a/views/index/explore.ejs
+++ b/views/index/explore.ejs
@@ -4,7 +4,7 @@
 
 <h3>Artista 1</h3>
 
-<div class="glide espacamento">
+<div class="glide espacamento" id="glide1">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
         <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
@@ -26,19 +26,19 @@
 
   <h3>Fotografia</h3>
 
-  <div class="glide2 espacamento">
+  <div class="glide espacamento" id="glide2">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
-        <li class="glide__slide"> <img src="/public/IMGS/Luz_Station.jpg"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/Macaco2.jpg"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/Omniskull.jpg"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/orquidea.jpg"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/Passarinhando.jpg"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/PorDoSol.jpg"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/VoltandoProFuturo.jpg"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/BairroLiberdade.jpg"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/Zebra_GuiMoraes.jpg"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/Gato.jpg"/></li>
+        <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/Luz_Station.jpg);"></div>
+        <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/Macaco2.jpg);"></div>
+        <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/Omniskull.jpg);"></div>
+        <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/orquidea.jpg);"></div>
+        <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/Passarinhando.jpg);"></div>
+        <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/PorDoSol.jpg);"></div>
+        <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/VoltandoProFuturo.jpg);"></div>
+        <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/BairroLiberdade.jpg);"></div>
+        <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/Zebra_GuiMoraes.jpg);"></div>
+        <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/Gato.jpg);"></div>
       </ul>
     </div>
     <div class="glide__arrows" data-glide-el="controls">
@@ -48,7 +48,7 @@
   </div>
 
   <h3>Artista 3</h3>
-  <div class="glide3 espacamento">
+  <div class="glide espacamento" id="glide3">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
         <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
@@ -72,6 +72,7 @@
 
 <%- contentFor("styles") %>
 <link rel="stylesheet" href="/public/glide-3.4.1/dist/css/glide.core.min.css" />
+<link rel="stylesheet" href="/public/glide-3.4.1/dist/css/glide.theme.min.css" />
 
 <%- contentFor("scripts") %>
 <script src="/public/glide-3.4.1/dist/glide.min.js"></script>
@@ -84,9 +85,9 @@ const config={
   startAt:1,
   
 }
-new Glide(".glide", config).mount();
-new Glide(".glide2", config).mount();
-new Glide(".glide3", config).mount();
+new Glide("#glide1", config).mount();
+new Glide("#glide2", config).mount();
+new Glide("#glide3", config).mount();
 </script>
 
 <%- contentFor("pos-styles") %>
