--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -39,35 +39,6 @@ header nav {
     position: relative;
 }
 
-.fundo-login {
-    display: none;
-}
-
-.fundo-login.active {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgba(1, 1, 1, 0.5);
-}
-
-.login {
-    background: #fff;
-    width: 600px;
-    max-width: 600px;
-    margin: 20px;
-    padding: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 5px;
-    box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
-}
-
 header nav .menu a{
     position: relative;
     color: #ffffff;
@@ -93,11 +64,19 @@ header nav .menu a:hover:before {
     width: 100%;
 }
 
-header .fundo-login .login button {
+.Entrar {
     margin-top: 20px;
-    border-radius: 5px;
-    background-color: cornflowerblue;
     padding: 0px 30px;
+
+    border-width: 4px;
+    border-style: solid;
+    border-image: linear-gradient(to right, rgb(0, 183, 255), hotpink) 2;
+    border-radius: 5px;
+    
+    background: linear-gradient(to right, rgb(0, 183, 255), hotpink);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 /*CSS Home - Slider Passer*/
