--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,22 +49,20 @@
 					</button>
 				</div>
 				<div class="modal-body">
-					
 					<ul class="nav nav-pills" id="tabLogin" role="tablist">
 						<li class="nav-item">
-							<a class="nav-link active" id="home-tab" data-toggle="pill" href="#home" role="tab" aria-controls="home" aria-selected="true">Login</a>
+							<a class="nav-link active" id="home-tab" data-toggle="pill" href="#home" role="tab" aria-controls="home" aria-selected="true">Entrar</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" id="profile-tab" data-toggle="pill" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Sign-In</a>
+							<a class="nav-link" id="profile-tab" data-toggle="pill" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Criar uma conta</a>
 						</li>
 					</ul>
 					<div class="tab-content" id="myTabContent" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
 						<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-
-							<p class="material-icons" style="font-size: 64px; display: block;">account_circle</p>
+						<!--<p class="material-icons" style="font-size: 64px; display: block;">account_circle</p> -->
+							<img src="/public/IMGS/boy-dynamic-gradient.png" style="display: block; width: 100px;">
 							<input type="text" placeholder="E-mail ou Apelido" class="mg">
 							<input type="password" placeholder="Senha" class="mg">
-							
 							<div class="button-wrapper" data-tippy-content="Click to copy button 64">
 								<button class="button-64" role="button">
 									<span class="text">Entrar</span>
@@ -74,13 +72,15 @@
 
 						<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
 
-							<input type="text" placeholder="Nome" class="mg" style="margin-top: 20px;">
-							<input type="text" placeholder="E-mail" class="mg">
-							<input type="password" placeholder="Senha" class="mg">
+							<input type="text" placeholder="Nome" class="mg" style="margin-top: 20px;" id="nome">
+							<input type="text" placeholder="Sobrenome" class="mg" id="sobrenome">
+							<input type="text" placeholder="Apelido" class="mg" id="apelido">
+							<input type="text" placeholder="E-mail" class="mg" id="email">
+							<input type="password" placeholder="Senha" class="mg" id="senha">
 							<input type="password" placeholder="Confimação de senha" class="mg">
 							
 							<div class="button-wrapper" data-tippy-content="Click to copy button 64">
-								<button class="button-64" role="button">
+								<button class="button-64" type="button" onclick="criarUsuario()">
 									<span class="text">Cadastrar</span>
 								</button>
 							</div>
