--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -81,13 +81,13 @@ header nav .menu a:hover:before {
     box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
     box-sizing: border-box;
     border-radius: 0px;
-    display: flex;
+    display: inline-block;
     justify-content: center;
     line-height: 1em;
     color: #242424;
     font-size: medium;
-    max-width: 100%;
-    min-width: 140px;
+    width: 100%;
+    max-width: 200px;
     padding: 3px;
     text-decoration: none;
     user-select: none;
@@ -107,6 +107,7 @@ header nav .menu a:hover:before {
     background-color: white;
     padding: 5px 25px;
     border-radius: 0px;
+    display: inline-block;
     width: 100%;
     height: 100%;
     transition: 300ms;
