--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -123,7 +123,81 @@
 
 <!-- Icons -->
   <h1 class="titulos">Benefícios</h1>
+
   <div class="row">
+    <div class="col-sm-4 coluna">
+      <div class="ficha">
+        <div class="interno interno_1">
+            <div class="icone"><ion-icon name="cash"></ion-icon></div>
+            <div class="conteudo">
+                <h2>Remuneração Justa</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4 coluna">
+      <div class="ficha">
+        <div class="interno interno_2">
+            <div class="icone"><ion-icon name="bulb"></ion-icon></div>
+            <div class="conteudo">
+                <h2>Exponha as suas Ideias</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4 coluna">
+      <div class="ficha">
+        <div class="interno interno_3">
+            <div class="icone"><ion-icon name="finger-print"></ion-icon></div>
+            <div class="conteudo">
+                <h2>Deixe a sua Marca</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4 coluna">
+      <div class="ficha">
+        <div class="interno interno_1">
+            <div class="icone"><ion-icon name="rocket"></ion-icon></ion-icon></div>
+            <div class="conteudo">
+                <h2>Compre Projetos</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4 coluna">
+      <div class="ficha">
+        <div class="interno interno_2">
+            <div class="icone"><ion-icon name="trending-up"></ion-icon></div>
+            <div class="conteudo">
+                <h2>Possua Relevância</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4 coluna">
+      <div class="ficha">
+        <div class="interno interno_3">
+            <div class="icone"><ion-icon name="locate"></ion-icon></div>
+            <div class="conteudo">
+                <h2>Explore</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+<!--<div class="row">
     <div class="col-sm-4 coluna">
       <div class="cube">
         <div class="cube1">
@@ -180,7 +254,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 
 
@@ -194,6 +268,6 @@
 </style>
 
 
-
+<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
 
