--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -446,3 +446,120 @@ transition-property: clip-path;
     background-position: center;
 }
 
+.ficha {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.interno {
+    position: relative;
+    width: 286px;
+    height: 390px;
+    margin: 30px;
+    background: cornflowerblue;
+    border-radius: 20px;
+    border-bottom-left-radius: 160px;
+    border-bottom-right-radius: 160px;
+    box-shadow: 0 15px 0 #fff,
+    inset 0 -15px 0 rgb(255, 255, 255, 0.25),
+    0 45px 0 rgb(0, 0, 0, 0.15);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    max-width: 100%;
+}
+
+.interno::before {
+    content: '';
+    position: absolute;
+    top: -30%;
+    left: -40%;
+    width: 100%;
+    height: 120%;
+    background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2));
+    transform: rotate(35deg);
+    pointer-events: none;
+    filter: blur(5px);
+}
+
+.interno_1 {
+    background: linear-gradient(to bottom, rgb(192, 0, 96), rgb(0, 174, 255));
+}
+
+.interno_2 {
+    background: linear-gradient(to bottom, rgb(0, 174, 255), rgb(223, 0, 252));
+}
+
+.interno_3 {
+    background: linear-gradient(to bottom, rgb(223, 0, 252), rgb(170, 0, 85));
+}
+
+.icone {
+    position: relative;
+    width: 140px;
+    height: 120px;
+    background: rgb(27, 27, 27);
+    border-bottom-left-radius: 100px;
+    border-bottom-right-radius: 100px;
+
+    box-shadow: 0 15px 0 rgb(0, 0, 0, 0.1),
+    inset 0 -8px 0 rgb(255, 255, 255);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+}
+
+.icone::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -50px;
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    border-top-right-radius: 50px;
+    box-shadow: 15px -15px 0 15px rgb(27, 27, 27);
+}
+
+.icone::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: -50px;
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    border-top-left-radius: 50px;
+    box-shadow: -15px -15px 0 15px rgb(27, 27, 27);
+}
+
+.icone ion-icon {
+    color: #fff;
+    position: relative;
+    font-size: 6em;
+    z-index: 10000;
+    --ionicon-stroke-widht: 24px;
+}
+
+
+.conteudo {
+    position: absolute;
+    width: 100%;
+    padding: 30px;
+    padding-top: 140px;
+    text-align: center;
+}
+
+.conteudo h2 {
+    font-size: 1.75em;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.conteudo p {
+    color: #fff;
+    line-height: 1.5em;
+}
