--- a/views/index/about.ejs
+++ b/views/index/about.ejs
@@ -4,15 +4,64 @@
 
 <p>Projeto Interdisciplinar II - ESPM TECH / 2º semestre</p>
 
+<div class="container-fluid container" style="max-width: 1000px;">
+    <h2>Integrantes</h2>
+    <div class="row">
+        <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
+            <div class="ficha">
+                <div class="quadrado">
+                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
+                    <h5 style="margin: 20px;">João Lucas Abreu Nogueira</h5>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
+            <div class="ficha">
+                <div class="quadrado">
+                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
+                    <h5 style="margin: 20px;">João Lucas Abreu Nogueira</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
+            <div class="ficha">
+                <div class="quadrado">
+                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
+                    <h5 style="margin: 20px;">João Lucas Abreu Nogueira</h5>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
+            <div class="ficha">
+                <div class="quadrado">
+                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
+                    <h5 style="margin: 20px;">João Lucas Abreu Nogueira</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+</div>
+
 <h2>Integrantes do grupo:</h2>
 
-<ul>
-    <li>Bernardo César de Figueiredo</li>
+<%- contentFor("pos-styles") %>
+<style type="text/css">
 
-    <li>Fernando Zafani Gomes Filho</li>
+body {
+        color: #fff;
+    }
 
-    <li>Igor Carolino Ruiz</li>
+h1 {
+    opacity: 1;
+    font-size: 3.7em;
+    background: linear-gradient(to right, hotpink, rgb(255, 255, 255));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 900;
+}
 
-    <li>João Lucas Abreu Nogueira</li>
-
-</ul>
+</style>
